R9 LLM 归因路径端到端修复：补 @UserMessage、单拐点分片、三层降级兑现
- 5 个 agent 接口补 @UserMessage（此前 AiServices 构造即抛 IllegalConfigurationException，LLM 路径零实测的阻断缺陷）
- LlmAligner 重构单拐点分片（alignOne：1 拐点 + 规则分预筛 top-8 候选，散文包裹 JSON 提取兜底，JavaTimeModule 注册）
- RippleOrchestrator 兑现 javadoc 历史承诺：LLM 归因为空时整体降级规则对齐，mode 如实落盘
- pom 补 maven.compiler.parameters（工具参数名对 LLM 可见，弃 arg0）
- 测试 46→48：散文包裹提取、空返回回填事件缺失；AlignmentValidationTest 同步含后续 Java17 兼容的 get(0) 替换

Co-Authored-By: Claude Code <noreply@anthropic.com>